--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
                 <img src="img/sl3.jpg" class="d-block w-100 resimSlader" alt="...">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#car<h2 class=" mb-5 font-weight-bold">Hakkımızda</h2>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 
-            <hr class="ayrac"><i class="fa-solid fa-leaf isembol"></i>ouselExampleIndicators" role="button"
-            data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
@@ -299,11 +297,13 @@
 
 
     <!-- footer start -->
-    <div class="bg-dark text-light text-center">
-        <p class="align-middle p-5 ">
-            <span>Tüm Hakları Saklıdır &copy;2023 |</span><br>
-            <span> Designed by <b>PAYLAŞTIKÇA</b></span>
-        </p>
+    <div class="footer">
+        <div class="bg-dark text-light text-center mb-0">
+            <p class="align-middle p-5 ">
+                <span>Tüm Hakları Saklıdır &copy;2023 |</span><br>
+                <span> Designed by <b>PAYLAŞTIKÇA</b></span>
+            </p>
+        </div>
     </div>
 
     <!-- footer end -->
